--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
   <body>
     <div class="header">
       <img src="./eisenhower-matrix.jpg">
-      <a class="more-inf" 
+      <a class="more-info" 
           href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
     <div class="main-block">
-      <p id="adding-element">
+      <p id="adding-task">
         <label for="new-task">Add Item</label>
-        <div class="task-row-wrapper">
+        <div class="x">
           <input id="new-task" 
                  class="task" 
                  type="text">
