refactor: use concise names of id and classes according to rule 3.3 in html-and-css.md

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="main-block">
       <p id="adding-task">
         <label for="new-task">Add Item</label>
-        <div class="x">
+        <div class="task-wrapper">
           <input id="new-task" 
                  class="task" 
                  type="text">
