--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
           charset="utf-8">
   </head>
   <body class="body">
-    <div class="header">
+    <header class="header">
       <img class="img" src="./eisenhower-matrix.jpg">
       <a class="more-info" 
           href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-    </div>
-    <div class="main-block">
-      <p id="adding-task">
+    </header>
+    <main class="main-block">
+      <section id="adding-task">
         <label class="title-add-item" for="new-task">Add Item</label>
         <div class="task-wrapper">
           <input id="new-task" 
@@ -23,7 +23,7 @@
                  type="text">
           <button class="btn">Add</button>
         </div>
-      </p>
+      </section>
       <h3 class="title">Todo</h3>
       <ul id="incomplete-tasks">
         <li class="item">
@@ -53,7 +53,7 @@
           <button class="btn delete"><img class="delete-img" src="./remove.svg"></button>
         </li>
       </ul>
-    </div>
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
