--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body class="body">
     <header class="header">
-      <img class="img" src="./eisenhower-matrix.jpg">
+      <img class="img" src="./eisenhower-matrix.jpg" alt="eisenhower-matrix">
       <a class="more-info" 
           href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
@@ -31,7 +31,7 @@
           <label class="task item-label">Pay Bills</label>
           <input type="text" class="task item-text">
           <button class="btn edit">Edit</button>
-          <button class="btn delete"><img class="delete-img" src="./remove.svg"></button>
+          <button class="btn delete"><img class="delete-img" src="./remove.svg" alt="delete"></button>
         </li>
         <li class="edit-mode item">
           <input type="checkbox" class="item-checkbox">
@@ -40,7 +40,7 @@
                  value="Go Shopping" 
                  class="task item-text">
           <button class="btn edit">Save</button>
-          <button class="btn delete"><img class="delete-img" src="./remove.svg"></button>
+          <button class="btn delete"><img class="delete-img" src="./remove.svg" alt="delete"></button>
         </li>
       </ul>
       <h3 class="title">Completed</h3>
@@ -50,7 +50,7 @@
           <label class="task item-label">See the Doctor</label>
           <input type="text" class="task item-text">
           <button class="btn edit">Edit</button>
-          <button class="btn delete"><img class="delete-img" src="./remove.svg"></button>
+          <button class="btn delete"><img class="delete-img" src="./remove.svg" alt="delete"></button>
         </li>
       </ul>
     </main>
