--- a/index.html
+++ b/index.html
@@ -10,47 +10,47 @@
   </head>
   <body class="body">
     <header class="header">
-      <img class="img" src="./eisenhower-matrix.jpg" alt="eisenhower-matrix">
-      <a class="more-info" 
+      <img class="header__img" src="./eisenhower-matrix.jpg" alt="eisenhower-matrix">
+      <a class="header__more-info" 
           href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="main-block">
       <section id="adding-task">
-        <label class="title-add-item" for="new-task">Add Item</label>
-        <div class="task-wrapper">
+        <label class="main-block__title-add-item" for="new-task">Add Item</label>
+        <div class="main-block__task-wrapper">
           <input id="new-task" 
-                 class="task item-text" 
+                 class="task main-block__input-text" 
                  type="text">
-          <button class="btn">Add</button>
+          <button class="main-block__btn">Add</button>
         </div>
       </section>
-      <h3 class="title">Todo</h3>
-      <ul id="incomplete-tasks">
-        <li class="item">
-          <input type="checkbox" class="item-checkbox">
-          <label class="task item-label">Pay Bills</label>
-          <input type="text" class="task item-text">
-          <button class="btn edit">Edit</button>
-          <button class="btn delete"><img class="delete-img" src="./remove.svg" alt="delete"></button>
+      <h3 class="main-block__title">Todo</h3>
+      <ul id="list-items_incomplete">
+        <li class="main-block__item">
+          <input type="checkbox" class="main-block__input-checkbox">
+          <label class="task main-block__label-task">Pay Bills</label>
+          <input type="text" class="task main-block__input-text">
+          <button class="main-block__btn main-block__btn_edit">Edit</button>
+          <button class="main-block__btn main-block__btn_del"><img class="main-block__btn_del_img" src="./remove.svg" alt="delete"></button>
         </li>
-        <li class="edit-mode item">
-          <input type="checkbox" class="item-checkbox">
-          <label class="task item-label">Go Shopping</label>
+        <li class="edit-mode main-block__item">
+          <input type="checkbox" class="main-block__input-checkbox">
+          <label class="task main-block__label-task">Go Shopping</label>
           <input type="text" 
                  value="Go Shopping" 
-                 class="task item-text">
-          <button class="btn edit">Save</button>
-          <button class="btn delete"><img class="delete-img" src="./remove.svg" alt="delete"></button>
+                 class="task main-block__input-text">
+          <button class="main-block__btn main-block__btn_edit">Save</button>
+          <button class="main-block__btn main-block__btn_del"><img class="main-block__btn_del_img" src="./remove.svg" alt="delete"></button>
         </li>
       </ul>
-      <h3 class="title">Completed</h3>
-      <ul id="completed-tasks">
-        <li class="item">
-          <input type="checkbox" checked class="item-checkbox">
-          <label class="task item-label">See the Doctor</label>
-          <input type="text" class="task item-text">
-          <button class="btn edit">Edit</button>
-          <button class="btn delete"><img class="delete-img" src="./remove.svg" alt="delete"></button>
+      <h3 class="main-block__title">Completed</h3>
+      <ul id="list-items_completed">
+        <li class="main-block__item">
+          <input type="checkbox" checked class="main-block__input-checkbox">
+          <label class="task main-block__label-task">See the Doctor</label>
+          <input type="text" class="task main-block__input-text">
+          <button class="main-block__btn main-block__btn_edit">Edit</button>
+          <button class="main-block__btn main-block__btn_del"><img class="main-block__btn_del_img" src="./remove.svg" alt="delete"></button>
         </li>
       </ul>
     </main>
